# Financial-Analyzer

./: .env.example  .gitignore  Readme.md  input.json  pyproject.toml
.github/workflows/: python-publish.yml
app/: cli.py  config.py
app/analysis/: ratios.py
app/insights/: gemini_insights.py
app/normalization/: normalizer.py  schema.py
app/reporting/: pdf_report.py
app/risk/: scoring.py
app/utils/: json_loader.py  logger.py
app/validation/: validator.py
app/visualization/: plotter.py
